--- a/03-quiz.html
+++ b/03-quiz.html
@@ -84,6 +84,15 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item"><a href="#" class="page-link">이전</a></li>
+                            <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                            <li class="page-item"><a href="#" class="page-link">2</a></li>
+                            <li class="page-item"><a href="#" class="page-link">3</a></li>
+                            <li class="page-item"><a href="#" class="page-link">4</a></li>
+                            <li class="page-item"><a href="#" class="page-link">5</a></li>
+                            <li class="page-item"><a href="#" class="page-link">다음</a></li>
+                        </ul>
                     </div>
                     <div class="col-md-2"></div>
                 </article>
